--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
     <h1 id="myH1"></h1>
     <h1 id="myH2"></h1>
     <h1 id="myH3"></h1>
-    <div id="div" style="display: flex; align-items: center;" ></div>
+
+
+    <div id="div" style="display: flex; align-items: center;" >
+        <form id="F_1A_form">
+            <p style="font-size: 2rem;">F_1A verb form generater</p>
+            <input type="text" id="F_1A_input" placeholder="F_1A Input" style="font-size: 2rem;">
+        <button type="submit" style="font-size: 2rem;">Generate</button><br>
+        <div id="F_1A_display"></div>
+        </form>
+    </div>
 
 
     <script src="declarations.js" charset="utf-8" type="text/javascript"></script>
