--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <div id="div" style="display: flex; align-items: center;" >
         <form id="F_1A_form">
-            <p style="font-size: 2rem; margin: 0 10px 10px 10px;">F_1A verb form generater</p>
-            <input type="text" id="F_1A_input" placeholder="F_1A Input" style="font-size: 1.2rem; width: 275px;">
-        <button type="submit" style="font-size: 1.2rem;">Generate</button>
+            <p style="font-size: 2rem;">F_1A Verb Form Generater</p>
+            <input type="text" id="F_1A_input" placeholder="F_1A Input" style="font-size: 1.5rem; width: 275px;">
+        <button type="submit" style="font-size: 1.5rem;">Generate</button>
         <div id="F_1A_display"></div>
         </form>
     </div>
