design change for the verb forms

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <div id="formsContainer" style="display: flex; align-items: center;" >
+    <div id="formsContainer" style="display: flex; align-items: center; border:none" >
 <!--         <form id="F_1A_form">
             <p style="font-size: 2rem;">F_1A Verb Form Generater</p>
             <input type="text" id="F_1A_input" placeholder="F_1A Input" style="font-size: 1.5rem; width: 275px;">
