change the table header to arabic

--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
 
 </head>
 <body>
-
-    <div id="formsContainer" style="display: flex; align-items: center; border:none" >
-<!--         <form id="F_1A_form">
-            <p style="font-size: 2rem;">F_1A Verb Form Generater</p>
-            <input type="text" id="F_1A_input" placeholder="F_1A Input" style="font-size: 1.5rem; width: 275px;">
-            <button type="submit" style="font-size: 1.5rem;">Generate</button>
-            <div id="F_1A_display"></div>
-        </form> -->
+    <div style="width:auto; display: flex; flex-direction: row;">
+        <div id="formsContainer" style="display: flex; align-items: center; border:none" >
+            <!--         <form id="F_1A_form">
+                        <p style="font-size: 2rem;">F_1A Verb Form Generater</p>
+                        <input type="text" id="F_1A_input" placeholder="F_1A Input" style="font-size: 1.5rem; width: 275px;">
+                        <button type="submit" style="font-size: 1.5rem;">Generate</button>
+                        <div id="F_1A_display"></div>
+                    </form> -->
+        </div>
+        <div id="wordListContainer" style="display: flex; align-items: center; border:none;flex-direction: column;" >
+    
+        </div>
     </div>
+
 
 
     <script src="declarations.js" charset="utf-8" type="text/javascript"></script>
